   if there's none in the acquisition context. (Deliverance has
   apparently provided these headers for a while, and we already use
   them in the top nav, but we haven't used them in this view.) To use
   this, the proxy server can set headers X-Openplans-Application to
   anything other than 'zope', and X-Openplans-Project to the ID of
   the project. (slinkp, rmarianski)


Bugs Fixed:

* The user folder ID migration fix from opencore 0.14 (see below)
  would barf on a few mysterious users. Fixed upstream in membrane;
  regardless of membrane, we work around that now.  (slinkp)

Refactoring:

 * Optimization: Memoize BaseView.piv and BaseView.miv, to allow those
   views' own memoizations to be useful. (slinkp)


0.15.0 (2008-12-22)
===================


Data Migrations:

 * You will need to use the portal_setup tool to run all the upgrades
   through 0.15. This is done the usual way: In the ZMI, go to
   openplans/portal_setup/manage_upgrades , select the
   opencore.configuration profile, and run all the available upgrades.

   WARNING, it is not known whether you can safely downgrade after
   running these migrations.  We always recommend making backups and
   testing with a copy of live data before you upgrade for real.


Features:

 * Partial translations of the UI into Spanish, French & Portuguese
   (dimo)

 * Member objects now have a _change_member_id() method. This is not
   exposed by UI yet, but admins can use it in eg. zopectl debug.

 * Member profile now has a "contact" button which links to a mail
   form. The member's email address is not exposed. (slinkp, rafrombrc)

 * We now use the member's full name (by way of Title()) in most
   places that conceptually refer to a person, and the member's ID
   only in places that refer to the account. Fixes openplans:#2740
   (slinkp)

 * Mailing lists now have a /membership view that non-Managers can
   see.  Includes a link to each member's contact form. Email