@@ -1,6 +1,8 @@
+from Acquisition import aq_base
 from fassembler.configparser import configparser
 from opencore.browser.naming import get_view_names
 import logging
+import transaction
 
 logger = logging.getLogger("opencore.upgrades")
 
@@ -68,3 +70,62 @@ def run_import_step(setup_tool, step_id, profile_id=default_profile_id,
                                                  purge_old=purge_old,
                                                  )
     return result
+
+
+def updateRoleMappings(portal, commit_interval=10):
+    """
+    An alternate implementation of the workflow tool's updateRoleMappings
+    behaviour that commits the transaction frequently to prevent
+    inevitable conflict errors from such a long-running process.
+    """
+    wft = portal.portal_workflow
+    wfs = {}
+    for id in wft.objectIds():
+        wf = wft.getWorkflowById(id)
+        if hasattr(aq_base(wf), 'updateRoleMappingsFor'):
+            wfs[id] = wf
+    count = _recursiveUpdateRoleMappings(portal, wfs, wft,
+                                         commit_interval=commit_interval)
+    # One more commit to get any leftovers.
+    transaction.get().note("Workflow Tool role mappings update COMPLETE: %s"
+                           % count)
+    transaction.commit()
+    return count
+
+def _recursiveUpdateRoleMappings(ob, wfs, wft, count=0, commit_interval=10):
+    # wfs = workflows; wft = portal_workflow tool.
+    wf_ids = wft.getChainFor(ob)
+    if wf_ids:
+        changed = 0
+        for wf_id in wf_ids:
+            wf = wfs.get(wf_id, None)
+            if wf is not None:
+                did = wf.updateRoleMappingsFor(ob)
+                if did:
+                    changed = 1
+        if changed:
+            count += 1
+            if hasattr(aq_base(ob), 'reindexObject'):
+                # Reindex security-related indexes
+                try:
+                    ob.reindexObject(idxs=['allowedRolesAndUsers'])
+                except TypeError:
+                    # Catch attempts to reindex portal_catalog.
+                    pass
+            if count % commit_interval == 0:
+                msg = "Workflow Tool role mappings update: committed %d" % count
+                transaction.get().note(msg)
+                transaction.commit()
+                logger.info('==== %s ====' % msg)
+
+    if hasattr(aq_base(ob), 'objectItems'):
+        obs = ob.objectItems()
+        if obs:
+            for k, v in obs:
+                changed = getattr(v, '_p_changed', 0)
+                count = _recursiveUpdateRoleMappings(v, wfs, wft, count,
+                                                     commit_interval)
+                if changed is None:
+                    # Re-ghostify.
+                    v._p_deactivate()
+    return count
